# xfce-ctile

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.in  configure  configure.ac  keybinds.c  main.c  tiling.c  winstate.h
.github/workflows/: mirror-action.yaml
src/: Makefile.am  Makefile.in  farey_sequence.c  gdkhandler.c  keybinds.c  main.c  tiling.c  tiling.h  winstate.c  winstate.h  wnckhandler.c  wnckhandler.h
